--- a/index.html
+++ b/index.html
@@ -179,6 +179,14 @@
             max-width: 200px;
         }
 
+        body {
+    background-image: url('Fondsushis.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+
         .submit-btn.visible {
             display: block;
         }
