--- a/index.html
+++ b/index.html
@@ -191,29 +191,34 @@
         }
 
         /* Adapter la page récapitulative pour tous les écrans */
+        .recap-page {
+            overflow-y: auto; /* Ajouter un défilement vertical si nécessaire */
+            padding: 2vmin; /* Réduire le padding */
+        }
+
         .recap-page h2 {
-            font-size: 5vmin; /* Taille de police relative */
-            margin-bottom: 2vmin; /* Espacement réduit */
+            font-size: 4vmin; /* Taille de police réduite */
+            margin-bottom: 1.5vmin; /* Espacement réduit */
         }
 
         .recap-page p {
-            font-size: 3.5vmin; /* Taille de police relative */
-            margin: 1.5vmin 0; /* Espacement réduit */
+            font-size: 3vmin; /* Taille de police réduite */
+            margin: 1vmin 0; /* Espacement réduit */
         }
 
         .recap-page .select-btn {
-            font-size: 4vmin; /* Taille de police relative */
-            padding: 1.5vmin 3vmin; /* Padding réduit */
-            margin-top: 2vmin; /* Espacement réduit */
+            font-size: 3.5vmin; /* Taille de police réduite */
+            padding: 1vmin 2vmin; /* Padding réduit */
+            margin-top: 1.5vmin; /* Espacement réduit */
         }
 
         #recap-content {
-            margin: 1.5vmin 0; /* Espacement réduit */
+            margin: 1vmin 0; /* Espacement réduit */
         }
 
         #recap-price h3 {
-            font-size: 4vmin; /* Taille de police relative */
-            margin-top: 2vmin; /* Espacement réduit */
+            font-size: 3.5vmin; /* Taille de police réduite */
+            margin-top: 1.5vmin; /* Espacement réduit */
         }
     </style>
 </head>
