--- a/index.html
+++ b/index.html
@@ -190,24 +190,37 @@
             display: none;
         }
 
+        /* Adapter les boutons de la sauce soja pour les petits écrans */
+        @media (max-width: 600px) {
+            .select-btn {
+                font-size: 3vmin; /* Taille de police réduite */
+                padding: 2vmin 3vmin; /* Padding réduit */
+                min-width: 80px; /* Largeur minimale réduite */
+            }
+
+            .btn-group {
+                flex-wrap: wrap; /* Permettre aux boutons de passer à la ligne */
+                gap: 10px; /* Espacement entre les boutons */
+            }
+        }
+
         /* Adapter la page récapitulative pour tous les écrans */
         .recap-page {
-            overflow-y: auto; /* Ajouter un défilement vertical si nécessaire */
             padding: 2vmin; /* Réduire le padding */
         }
 
         .recap-page h2 {
-            font-size: 4vmin; /* Taille de police réduite */
+            font-size: 3.5vmin; /* Taille de police réduite */
             margin-bottom: 1.5vmin; /* Espacement réduit */
         }
 
         .recap-page p {
-            font-size: 3vmin; /* Taille de police réduite */
+            font-size: 2.5vmin; /* Taille de police réduite */
             margin: 1vmin 0; /* Espacement réduit */
         }
 
         .recap-page .select-btn {
-            font-size: 3.5vmin; /* Taille de police réduite */
+            font-size: 3vmin; /* Taille de police réduite */
             padding: 1vmin 2vmin; /* Padding réduit */
             margin-top: 1.5vmin; /* Espacement réduit */
         }
@@ -217,7 +230,7 @@
         }
 
         #recap-price h3 {
-            font-size: 3.5vmin; /* Taille de police réduite */
+            font-size: 3vmin; /* Taille de police réduite */
             margin-top: 1.5vmin; /* Espacement réduit */
         }
     </style>
