--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
             box-shadow: 15px 15px 1px #ffa580, 15px 15px 1px 2px black;
             text-align: center;
             width: 80vmin;
-            height: 80vmin;
+            height: 90vmin; /* Hauteur augmentée */
+            margin-top: 5vmin; /* Marge en haut */
+            margin-bottom: 5vmin; /* Marge en bas */
             flex-direction: column;
             justify-content: center;
             position: relative;
@@ -207,8 +209,7 @@
         /* Adapter la page récapitulative pour tous les écrans */
         .recap-page {
             padding: 2vmin; /* Réduire le padding */
-            overflow-y: auto; /* Ajouter un défilement vertical si nécessaire */
-            max-height: 70vmin; /* Limiter la hauteur maximale */
+            font-size: 3vmin; /* Taille de police de base */
         }
 
         .recap-page h2 {
