--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             height: 100vh;
             overflow: hidden;
             position: relative;
-            background: url('fondsushis.png') center center no-repeat; /* Nouvelle image de fond */
+            background: url('fondsushis.png') center center no-repeat; /* Chemin relatif vers l'image */
             background-size: cover;
             display: flex;
             align-items: center;
