--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sushi Form</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Style de base */
         body {
@@ -19,7 +19,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-family: 'Fjalla One', sans-serif;
+            font-family: 'Roboto', sans-serif; /* Nouvelle police */
         }
 
         /* Page d'accueil */
@@ -35,22 +35,19 @@
             height: 80vmin;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: center; /* Centrer le contenu */
             align-items: center;
         }
 
         .home-page h1 {
-            font-family: 'Pacifico', cursive;
-            font-size: 10vmin;
+            font-size: 8vmin;
             margin-bottom: 5%;
-            animation: slideIn 1s ease-out;
+            font-weight: 700; /* Gras pour le titre */
         }
 
         .home-page p {
-            font-family: 'Quicksand', sans-serif;
-            font-size: 5vmin;
+            font-size: 4vmin;
             margin-bottom: 10%;
-            animation: slideIn 1.5s ease-out;
         }
 
         .home-page .order-btn {
@@ -60,19 +57,14 @@
             color: white;
             border: 2px solid black;
             cursor: pointer;
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            transition: 0.2s all ease-in-out;
             box-shadow: 3px 3px 1px black;
             border-radius: 10px;
         }
 
         .home-page .order-btn:hover {
-            transform: scale(1.05);
-            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        @keyframes slideIn {
-            from { transform: translateY(-50px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
+            background: black;
+            color: white;
         }
 
         /* Style du formulaire */
@@ -88,7 +80,8 @@
             margin-top: 5vmin;
             margin-bottom: 5vmin;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start; /* Déplacer le contenu vers le haut */
+            align-items: center;
             position: relative;
         }
 
@@ -96,7 +89,7 @@
             display: none;
             text-align: center;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start; /* Déplacer le contenu vers le haut */
             align-items: center;
         }
 
@@ -128,10 +121,11 @@
             justify-content: center;
             gap: 5%;
             margin-top: 5%;
+            flex-wrap: wrap; /* Permettre aux boutons de passer à la ligne */
         }
 
         .select-btn {
-            padding: 4% 6%;
+            padding: 2vmin 3vmin; /* Taille réduite */
             background: #ff6f61;
             color: white;
             font-weight: bold;
@@ -139,9 +133,10 @@
             cursor: pointer;
             transition: 0.2s all ease-in-out;
             box-shadow: 3px 3px 1px black;
-            font-size: 4vmin;
+            font-size: 3vmin; /* Taille de police réduite */
             border-radius: 15px;
-            min-width: 120px;
+            min-width: 80px; /* Largeur minimale réduite */
+            margin: 1vmin; /* Espacement entre les boutons */
         }
 
         .select-btn.selected {
@@ -204,15 +199,14 @@
 
         /* Style pour la question du légume */
         .question.legume-question h2 {
-            font-family: 'Pacifico', cursive;
             font-size: 6vmin;
             margin-bottom: 3vmin;
             color: #ff6f61;
             text-shadow: 2px 2px 0 #ffa580;
+            margin-top: -5vmin; /* Déplacer le texte plus haut */
         }
 
         .question.legume-question p {
-            font-family: 'Quicksand', sans-serif;
             font-size: 4vmin;
             margin-bottom: 5vmin;
             color: black;
